Fixed title alignment in mobile
#title {...} changed to #title .container-fluid{...}

--- a/css/styles.css
+++ b/css/styles.css
@@ -163,7 +163,7 @@ p {
 
 /* @media queries */
 @media (max-width: 1028px) {
-  #title {
+  #title .container-fluid{
     text-align: center;
   }
 
